--- a/Arbeidskrav_1/index.html
+++ b/Arbeidskrav_1/index.html
@@ -18,8 +18,7 @@
 
     <main>
         <nav>
-            <ul id="nav">
-            </ul>
+            <ul id="nav"> </ul>
         </nav>
 
         <section id="articleContent"></section>
